# startdde

./: .clang-format  .gitignore  .packit.yaml  CHANGELOG.md  Makefile  README.md  README.zh_CN.md  _splash_dev_test.go  checker.go  copyfile_test.go  dde_stub.go  deepin.desktop  deepin_test.desktop  default_font_config.go  default_font_config_test.go  display.go  etc_x11_session_d.go  exported_methods_auto.go  gdk_pixbuf_utils.c  gdk_pixbuf_utils.h  gen_test_report.sh  go.mod  go.sum  launch_group.go  launch_group_test.go  main.go  main_test.go  map_delay_handler.go  map_delay_handler_test.go  proxy.go  proxychains.go  proxychains_test.go  session.go  session_manager_inhibit.go  session_procese.go  session_process.go  session_process_test.go  session_stub.go  session_test.go  sound_effect.go  (+29 more)
.reuse/: dep5
.tx/: config
appusage/: app_usage.go
archlinux/: PKGBUILD
autostop/: autostop.go  autostop_test.go
dde-readahead/: dde-readahead.service  main.go
debian/: abi.json  changelog  control  copyright  deepin-fix-xauthority-perm.1  greeter-rotation-daemon.install  install  manpages  postinst  prerm  rules  startdde.1  startdde.install
dialogUI/: CMakeLists.txt
dialogUI/app/shutdown/: CMakeLists.txt  bg.c  bg.h  com.deepin.dde.shutdown.service  powerchoose.c  shutdown.c
dialogUI/app/shutdown/jsc/: dbus.go  shutdown.cfg
display/: backlight.go  brightness.go  cache.go  color_temp.go  config.go  config_test.go  config_v3_3.go  config_v3_3_test.go  config_v4.go  config_v4_test.go  config_v5_v6.go  config_version.go  configuration.go  detect_output.go  display.go  display_dbusutil.go  display_info.go  display_stub.go  display_test.go  displayconf.go  event_handler.go  exported_methods_auto.go  greeter.go  handle_event.go  listen.c  listen.h  manager.go  manager_ifc.go  manager_test.go  mode.go  monitor.go  monitor_ifc.go  monitor_sort.go  monitor_stub.go  monitor_test.go  output_workaround.go  output_wrapper.go  screen_resources.go  sensor.c  sensor.go  (+16 more)
iowait/: iowait.go  iowait_test.go  xcursor_remap.c  xcursor_remap.h
keyring/: keyring.c  keyring.go  keyring.h
memanalyzer/: cgroup.go  cgroup_test.go  config.go  config_test.go  memory.go  memory_test.go
memchecker/: config.go  config_test.go  memchecker.go  memchecker_test.go  memory.go  memory_test.go
misc/: 00deepin-dde-env  app_startup.conf  clean_xauthority  deepin-session  deepin.desktop  filter.conf  lightdm.conf  splash_dev_test.go
swapsched/: wm.go  (+3 more)
(+261 files in other folders)
